--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="SpinnerAsEditText" parent="@android:style/Widget.Spinner">
-        <item name="android:background">#ff303030</item>
+        <item name="android:background">#FFFF</item>
     </style>
     
     <style name="TextViewAsEditText" parent="@android:style/Widget.TextView">
