--- a/res/layout/match.xml
+++ b/res/layout/match.xml
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:gravity="center"
-                android:orientation="horizontal" android:id="@+id/">
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
